[workspace]
members = [
  "runtime/v8",
  "runtime/v9",
  "runtime/v10",
  "runtime/v11",
  "actors/account",
  "actors/init",
  "actors/cron",
  "actors/paych/v8",
  "actors/paych/v9",
  "actors/paych/v10",
  "actors/paych/v11",
  "actors/system/v8",
  "actors/system/v9",
  "actors/system/v10",
  "actors/system/v11",
  "actors/multisig/v8",
  "actors/multisig/v9",
  "actors/multisig/v10",
  "actors/multisig/v11",
  "actors/market",
  "actors/power/v8",
  "actors/power/v9",
  "actors/power/v10",
  "actors/power/v11",
  "actors/reward/v8",
  "actors/reward/v9",
  "actors/reward/v10",
  "actors/reward/v11",
  "actors/verifreg/v8",
  "actors/verifreg/v9",
  "actors/verifreg/v10",
  "actors/verifreg/v11",
  "actors/miner/v8",
  "actors/miner/v9",
  "actors/miner/v10",
  "actors/miner/v11",
  "actors/datacap",
  "actors/eam",
  "actors/evm",
  "actors/ethaccount",
  "fil_actor_interface",
  "actors/evm_shared",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
byteorder = "1.4.3"
cid = { version = "0.8", default-features = false, features = ["std"] }
frc42_dispatch = "3.0.0"
frc46_token = "3.1.0"
fvm = { version = "~2.3", default-features = false }
fvm_ipld_amt = { version = "0.5.1", features = ["go-interop"] }
fvm_ipld_bitfield = "0.5"
fvm_ipld_blockstore = "0.1"
fvm_ipld_encoding = "0.3"
fvm_ipld_hamt = "0.6.1"
fvm_shared = { version = "~2.3", default-features = false }
fvm_shared3 = { package = "fvm_shared", version = "3.2", default-features = false }
getrandom = { version = "0.2.5" }
hex = "0.4.3"
hex-literal = "0.3.4"
indexmap = { version = "1.9", features = ["serde-1"] }
integer-encoding = { version = "3.0.3", default-features = false }
itertools = "0.10"
lazy_static = "1.4"
libipld-core = "0.14"
log = "0.4"
multihash = "0.16"
num = "0.4.0"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-derive = "0.3"
num-traits = "0.2"
paste = "1.0.9"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.8"
serde_tuple = "0.5"
serde_yaml = "0.9"
sha2 = "0.10.5"
thiserror = "1.0"
toml = "0.7"
uint = { version = "0.9.3", default-features = false }
unsigned-varint = "0.7.1"

fil_actor_verifreg_v10 = { version = "2.0.0", path = "./actors/verifreg/v10" }
fil_actor_verifreg_v11 = { version = "2.0.0", path = "./actors/verifreg/v11" }
fil_actor_verifreg_v9 = { version = "2.0.0", path = "./actors/verifreg/v9" }
fil_actors_runtime_v10 = { version = "2.0.0", path = "./runtime/v10" }
fil_actors_runtime_v11 = { version = "2.0.0", path = "./runtime/v11" }
fil_actors_runtime_v8 = { version = "2.0.0", path = "./runtime/v8" }
fil_actors_runtime_v9 = { version = "2.0.0", path = "./runtime/v9" }
