[workspace]
members = [
  "fil_actors_shared",
  "fil_actors_test_utils",
  "fil_actor_interface",
  "actors/account",
  "actors/init",
  "actors/cron",
  "actors/paych",
  "actors/system",
  "actors/multisig",
  "actors/market",
  "actors/power",
  "actors/reward",
  "actors/verifreg",
  "actors/miner",
  "actors/datacap",
  "actors/eam",
  "actors/evm",
  "actors/ethaccount",
  "actors/evm_shared",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
byteorder = "1.4.3"
cid = { version = "0.8", default-features = false, features = ["std"] }
frc42_dispatch = "3.0.0"
frc46_token = "3.1.0"
fvm_ipld_amt = { version = "0.5.1", features = ["go-interop"] }
fvm_ipld_bitfield = "0.5"
fvm_ipld_blockstore = "0.1"
fvm_ipld_encoding = "0.3"
fvm_ipld_hamt = "0.6.1"
fvm_shared = { version = "~2.4", default-features = false }
fvm_shared3 = { package = "fvm_shared", version = "3.2", default-features = false }
getrandom = { version = "0.2.10" }
hex = "0.4.3"
hex-literal = "0.3.4"
indexmap = { version = "1.9", features = ["serde-1"] }
integer-encoding = { version = "3.0.3", default-features = false }
itertools = "0.10"
lazy_static = "1.4"
libipld-core = "0.14"
log = "0.4"
multihash = "0.16"
num = "0.4.0"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-derive = "0.3"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1.0.9"
pretty_assertions = "1.3.0"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.13"
serde_tuple = "0.5"
serde_yaml = "0.9"
sha2 = "0.10.5"
thiserror = "1.0"
toml = "0.7"
uint = { version = "0.9.3", default-features = false }
unsigned-varint = "0.7.1"

fil_actors_test_utils = { path = "./fil_actors_test_utils" }
