[workspace]
members = [
  "fil_actors_shared",
  "fil_actors_test_utils",
  "fil_actor_interface",
  "actors/account",
  "actors/init",
  "actors/cron",
  "actors/paych",
  "actors/system",
  "actors/multisig",
  "actors/market",
  "actors/power",
  "actors/reward",
  "actors/verifreg",
  "actors/miner",
  "actors/datacap",
  "actors/eam",
  "actors/evm",
  "actors/ethaccount",
]
resolver = "2"

[workspace.package]
version = "19.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ChainSafe/fil-actor-states"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
base64 = "0.22"
bitflags = "2"
byteorder = "1"
cid = { version = "0.11", default-features = false, features = ["std"] }
frc42_dispatch = "8"
frc42_macros = "6"
frc46_token = "12"
fvm_ipld_amt = "0.7"
fvm_ipld_bitfield = "0.7"
fvm_ipld_blockstore = "0.3"
fvm_ipld_encoding = "0.5"
fvm_ipld_hamt = "0.10"
fvm_shared = { version = "~2", default-features = false }
fvm_shared3 = { package = "fvm_shared", version = "~3", default-features = false }
fvm_shared4 = { package = "fvm_shared", version = "~4", default-features = false }
hex = "0.4"
hex-literal = "0.4"
indexmap = { version = "2", features = ["serde"] }
integer-encoding = { version = "4", default-features = false }
ipld-core = { version = "0.4", features = ["serde"] }
itertools = "0.13"
lazy_static = "1"
log = "0.4"
multihash-codetable = { version = "0.1", features = ["sha2"] }
num = "0.4"
num-bigint = { version = "0.4", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1"
pretty_assertions = "1"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_tuple = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
uint = { version = "0.10", default-features = false }
unsigned-varint = "0.8"

fil_actor_account_state = { version = "19.0.0", path = "./actors/account" }
fil_actor_cron_state = { version = "19.0.0", path = "./actors/cron" }
fil_actor_datacap_state = { version = "19.0.0", path = "./actors/datacap" }
fil_actor_evm_state = { version = "19.0.0", path = "./actors/evm" }
fil_actor_init_state = { version = "19.0.0", path = "./actors/init" }
fil_actor_market_state = { version = "19.0.0", path = "./actors/market" }
fil_actor_miner_state = { version = "19.0.0", path = "./actors/miner" }
fil_actor_multisig_state = { version = "19.0.0", path = "./actors/multisig" }
fil_actor_power_state = { version = "19.0.0", path = "./actors/power" }
fil_actor_reward_state = { version = "19.0.0", path = "./actors/reward" }
fil_actor_system_state = { version = "19.0.0", path = "./actors/system" }
fil_actor_verifreg_state = { version = "19.0.0", path = "./actors/verifreg" }
fil_actors_shared = { version = "19.0.0", path = "./fil_actors_shared" }

fil_actors_test_utils = { path = "./fil_actors_test_utils" }
