[package]
name = "fil_actor_account"
description = "Builtin account actor for Filecoin"
version = "10.0.0-alpha.1"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
keywords    = ["filecoin", "web3", "wasm"]

[dependencies]
fil_actors_runtime_v10 = { workspace = true }
fvm_actor_utils = "3.0.0"
fvm_shared = { version = "2.0.0-alpha.2", default-features = false }
anyhow                = { workspace = true }
frc42_dispatch        = { workspace = true }
fvm_ipld_blockstore   = { workspace = true }
fvm_ipld_encoding     = { workspace = true }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
