[package]
name = "fil_actor_account_v11"
description = "Builtin account actor for Filecoin"
version = "11.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
frc42_dispatch = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared3 = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
