[package]
name = "fil_actor_eam_v10"
description = "Builtin Ethereum address manager actor for Filecoin"
version = "10.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { workspace = true }
serde_tuple = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
multihash = { workspace = true }
cid = { workspace = true }
fvm_shared = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
