[package]
name = "fil_actor_eam_v11"
description = "Builtin Ethereum address manager actor for Filecoin"
version = "11.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.65"
cid = "0.8.6"
fil_actors_evm_shared_v11 = { version = "11.0.0-alpha.1", path = "../evm_shared_v11" }
fil_actors_runtime_v11.workspace = true
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
fvm_shared = { version = "3.2.0", default-features = false }
multihash = { version = "0.16.1", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.15"
rlp = { version = "0.5.1", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
