[package]
name = "fil_actor_eam_v11"
description = "Builtin Ethereum address manager actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm", "evm"]

[dependencies]
fvm_shared3 = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
