[package]
name = "fil_actor_evm_shared_v11"
description = "Shared libraries for the built-in EVM actor for Filecoin"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "evm"]

[dependencies]
fil_actors_runtime_v11 = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
uint = { workspace = true }
