[package]
name = "fil_actor_evm_v10"
description = "Builtin EVM actor for Filecoin"
version = "10.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
fvm_shared = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
cid = { workspace = true }
fvm_ipld_encoding = "0.3.3"
hex-literal = { workspace = true }
frc42_dispatch = { workspace = true }
fil_actors_evm_shared_v10 = { workspace = true }
