[package]
name = "fil_actor_evm_v10"
description = "Builtin EVM actor for Filecoin"
version = "10.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm", "evm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
cid = { workspace = true }
fil_actors_evm_shared_v10 = { path = "./shared_v10" }
frc42_dispatch = { workspace = true }
fvm_ipld_encoding3 = { workspace = true }
fvm_shared3 = { workspace = true }
hex-literal = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
