[package]
name = "fil_actor_evm_v11"
description = "Builtin EVM actor for Filecoin"
version = "11.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "evm"]
exclude = ["/precompile-testdata", "/tests/measurements", "/tests/contracts"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.65"
cid = { version = "0.8.3", default-features = false, features = [
  "serde-codec",
] }
fil_actors_evm_shared = { version = "11.0.0-alpha.1", path = "shared" }
fil_actors_runtime_v11.workspace = true
frc42_dispatch = "3.2.0"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.3"
fvm_ipld_kamt = { version = "0.2.0" }
fvm_shared = { version = "3.2.0", default-features = false }
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.3.4"
log = "0.4.14"
multihash = { version = "0.16.1", default-features = false }
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
substrate-bn = { version = "0.6.0", default-features = false }

[dev-dependencies]
ethers = { version = "1.0.2", features = ["abigen"] }
etk-asm = "^0.2.1"
lazy_static = "1.4.0"
once_cell = "1.17.0"
rand = "0.8.5"
serde_json = "1.0"
