[package]
name = "fil_actor_interface"
description = "Backward compatibility layer for all versions of builtin actor released v8 onwards."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true

[dependencies]
fil_actor_account_state = { version = "10.0.0-dev.3", path = "../actors/account" }
fil_actor_cron_state = { version = "10.0.0-dev.3", path = "../actors/cron" }
fil_actor_datacap_state = { version = "10.0.0-dev.3", path = "../actors/datacap" }
fil_actor_evm_state = { version = "10.0.0-dev.3", path = "../actors/evm" }
fil_actor_init_state = { version = "10.0.0-dev.3", path = "../actors/init" }
fil_actor_market_state = { version = "10.0.0-dev.3", path = "../actors/market" }
fil_actor_miner_state = { version = "10.0.0-dev.3", path = "../actors/miner" }
fil_actor_multisig_state = { version = "10.0.0-dev.3", path = "../actors/multisig" }
fil_actor_power_state = { version = "10.0.0-dev.3", path = "../actors/power" }
fil_actor_reward_state = { version = "10.0.0-dev.3", path = "../actors/reward" }
fil_actor_system_state = { version = "10.0.0-dev.3", path = "../actors/system" }
fil_actor_verifreg_state = { version = "10.0.0-dev.3", path = "../actors/verifreg" }
fil_actors_shared = { version = "10.0.0-dev.3", path = "../fil_actors_shared" }

anyhow.workspace = true
cid.workspace = true
fvm_ipld_bitfield.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_encoding.workspace = true
fvm_shared = { workspace = true }
fvm_shared3 = { workspace = true }
fvm_shared4 = { workspace = true }
integer-encoding.workspace = true
lazy_static.workspace = true
multihash = { workspace = true, features = ["identity"] }
num.workspace = true
once_cell = "1.18.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[build-dependencies]
anyhow.workspace = true
cid.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
