[package]
name = "fil_actor_interface"
description = "Backward compatibility layer for all versions of builtin actor released v8 onwards."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true

[dependencies]
fil_actor_account_state.workspace = true
fil_actor_cron_state.workspace = true
fil_actor_datacap_state.workspace = true
fil_actor_evm_state.workspace = true
fil_actor_init_state.workspace = true
fil_actor_market_state.workspace = true
fil_actor_miner_state.workspace = true
fil_actor_multisig_state.workspace = true
fil_actor_power_state.workspace = true
fil_actor_reward_state.workspace = true
fil_actor_system_state.workspace = true
fil_actor_verifreg_state.workspace = true
fil_actors_shared.workspace = true

anyhow.workspace = true
cid.workspace = true
fvm_ipld_bitfield.workspace = true
fvm_ipld_blockstore.workspace = true
fvm_ipld_encoding.workspace = true
fvm_shared = { workspace = true }
fvm_shared3 = { workspace = true }
fvm_shared4 = { workspace = true }
integer-encoding.workspace = true
multihash = { workspace = true, features = ["identity"] }
num.workspace = true
serde.workspace = true
