[package]
name = "fil_actor_json_derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macro for converting Serialize_tuple Filecoin actor types to JSON objects with named fields"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "parsing"] }
