[package]
name = "fil_actors_shared"
description = "System actors for the Filecoin protocol"
version = "9.1.0"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
filecoin-proofs-api = { version = "16", default-features = false }
fvm_ipld_amt = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true, features = ["proofs"] }
fvm_shared3 = { workspace = true }
fvm_shared4 = { workspace = true }
integer-encoding = { workspace = true }
itertools = { workspace = true }
multihash = { workspace = true }
num = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
quickcheck = { workspace = true, optional = true }
serde = { workspace = true }
serde_repr = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
unsigned-varint = { workspace = true }

[features]
default = []
json = ["fvm_ipld_bitfield/json"]
arb = ["quickcheck"]

[package.metadata.cargo-udeps.ignore]
normal = ["num"]

[dev-dependencies]
fil_actors_test_utils.workspace = true
hex.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
toml.workspace = true
