[package]
name = "fil_actors_shared"
description = "System actors for the Filecoin protocol"
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
version.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
filecoin-proofs-api = { version = "19", default-features = false }
frc46_token = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true, features = ["proofs"] }
fvm_shared3 = { workspace = true }
fvm_shared4 = { workspace = true }
integer-encoding = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
multihash-codetable = { workspace = true }
num = { workspace = true }
num-bigint = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
pastey = { workspace = true }
quickcheck = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = { workspace = true }
unsigned-varint = { workspace = true }

# Optional: JSON value conversion
base64 = { workspace = true, optional = true }
fil_actor_json_derive = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
json = [
  "fvm_ipld_bitfield/json",
  "dep:fil_actor_json_derive",
  "dep:serde_json",
  "dep:base64",
]
arb = ["quickcheck"]

[package.metadata.cargo-udeps.ignore]
normal = ["num"]

[dev-dependencies]
fil_actors_test_utils.workspace = true
hex.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true

[build-dependencies]
regex = { workspace = true }
walkdir = "2.5.0"
