[package]
name = "fil_actors_test_utils"
description = "Test utils for fil actors"
version = "24.0.0"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2021"
repository = "https://github.com/ChainSafe/fil-actor-states"
keywords = ["filecoin", "web3", "wasm"]
# Internal testing only
publish = false

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
