[package]
name = "fil_actor_init_v10"
description = "Builtin init actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2018"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
fil_actors_runtime_v10 = { workspace = true }
frc42_dispatch = "3.0.0"
fvm_shared = { version = "2.0.0-alpha.2", default-features = false }
fvm_ipld_hamt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
cid = { workspace = true, default-features = false, features = ["serde-codec"] }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
