[package]
name = "fil_actor_market_v10"
description = "Builtin market actor for Filecoin"
version = "10.0.0-alpha.1"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
repository  = "https://github.com/filecoin-project/builtin-actors"
keywords    = ["filecoin", "web3", "wasm"]

[dependencies]
anyhow                = { workspace = true }
cid                   = { workspace = true, default-features = false, features = ["serde-codec"] }
fil_actors_runtime_v10  = { workspace = true }
fvm_ipld_bitfield     = { workspace = true }
fvm_ipld_blockstore   = { workspace = true }
fvm_ipld_encoding     = { workspace = true }
fvm_ipld_hamt         = { workspace = true }
fvm_shared            = { workspace = true, default-features = false }
integer-encoding      = { workspace = true, default-features = false }
libipld-core          = { workspace = true, features = ["serde-codec"] }
log                   = { workspace = true }
num-derive            = { workspace = true }
num-traits            = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
fvm_ipld_amt = { workspace = true, features = ["go-interop"] }
frc42_dispatch = "3.0.0"
frc46_token = "3.1.0"

[dev-dependencies]
fvm_ipld_amt = { version = "0.5.1", features = ["go-interop"] }
multihash = { version = "0.16.1", default-features = false }
regex = "1"
itertools  = { workspace = true }
