[package]
name = "fil_actor_miner_v10"
description = "Builtin miner actor for Filecoin"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = [
  "ChainSafe Systems <info@chainsafe.io>",
  "Protocol Labs",
  "Filecoin Core Devs",
]
edition = "2018"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true, default-features = false, features = ["serde-codec"] }
fil_actors_runtime_v10 = { workspace = true, features = ["test_utils"] }
frc42_dispatch = { workspace = true }
fvm_ipld_amt = { workspace = true, features = ["go-interop"] }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
multihash = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
